--- a/css/reset.css
+++ b/css/reset.css
@@ -16,7 +16,7 @@ time, mark, audio, video, button, input, select { font-family: inherit; margin: 
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section { display: block; }
-body { min-height: 100vh; scroll-behavior: smooth; text-rendering: optimizeSpeed; color: #343A40; font-size: 12px; font-family: 'Pretendard'; -moz-text-size-adjust: none; -webkit-text-size-adjust: none; text-size-adjust: none; }
+body { min-height: 100vh; scroll-behavior: smooth; text-rendering: optimizeSpeed; color: #343A40; font-size: 12px; font-family: 'Pretendard'; -moz-text-size-adjust: none; -webkit-text-size-adjust: none; text-size-adjust: none; background-color: #000000;}
 ol, ul { list-style: none; }
 blockquote, q { quotes: none; }
 blockquote:before, blockquote:after,
